--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ body::after {
     cursor: pointer;
     z-index: 10;
     transform-style: preserve-3d;
-    /* Transition from code 1 + cursor from code 2 */
+    transform-origin: center -50%;
     transition: all 1.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
