--- a/style.css
+++ b/style.css
@@ -78,11 +78,14 @@ body::after {
 }
 
 #deck-container {
-    position: relative;
+    position: absolute;
+    bottom: 0px; 
+    left: 50%;
+    transform: translateX(-50%);
     width: 100%;
-    height: 250px;
-    margin-top: 40px;
-    perspective: 1000px;
+    height: 250px; 
+    z-index: 10;
+    pointer-events: none; 
 }
 
 /* Card Style */
@@ -95,7 +98,7 @@ body::after {
     cursor: pointer;
     z-index: 10;
     transform-style: preserve-3d;
-    transform-origin: center -50%;
+    transform-origin: 50% 200%;
     transition: all 1.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
